fixed some alignment issues

--- a/myStyle.css
+++ b/myStyle.css
@@ -11,7 +11,7 @@ h1,h2,h3,h4,h5,h6{
 
 .headline-header{
 	color:#FF0500;
-	margin-left: 8px;
+	margin-left: 30px;
 }
 
 .headline-item a{
@@ -62,12 +62,14 @@ h1,h2,h3,h4,h5,h6{
 	text-transform: uppercase;
 	text-align: center;
 	font-weight: 700;
+	margin-top: 1em;
 }
 
 .article-tagline{
 	font-size: 1.5em;
 	line-height: 28px;
 	text-align: center;
+	padding-top: 0.5em;
 }
 .top-article{
 	border: 1px solid #e5e5e5;
@@ -79,8 +81,7 @@ h1,h2,h3,h4,h5,h6{
 	line-height: 1.396em;
 	font-family: Sans-serif,Georgia,"Times New Roman",serif;
 	color: #3C3C3C;
-	margin-top: 10px;
-	margin-bottom: 10px;
+	margin: 10px 0.5em;
 }
 
  .deco {
@@ -146,8 +147,11 @@ h1,h2,h3,h4,h5,h6{
  font-size: 16px;
  line-height: 50px;
  border: none;
+ border-radius: 2px;
  padding: 0 8px;
- margin: 0 auto;
+ margin-left: 40px;
+ width: 200px;
+ margin-top: 20px;
 }
 
 .this-week h6,h3{
@@ -162,8 +166,12 @@ h1,h2,h3,h4,h5,h6{
 	width: 100px;
 }
 
+.this-week{
+	padding-bottom: 10px;
+}
+
 .pullquote{
-	font: 30px/30px Georgia,"Times New Roman",Times,serif;
+	font: 24px/30px Georgia,"Times New Roman",Times,serif;
     text-transform: uppercase;
     position: relative;
     padding: 20px 0 30px;
@@ -181,12 +189,19 @@ h1,h2,h3,h4,h5,h6{
 	border-left: 1px solid #e5e5e5;
 }
 
-.most-read-list{
+.most-read-list,.recent-issues ul{
   list-style-type: none;
 }
 
+.most-read
+
 most-read-item-img{
 	float: left;
+	padding:2px;
+}
+
+.headlines-list{
+	margin: 0 auto;
 }
 
 .headlines-list li{
@@ -195,6 +210,18 @@ most-read-item-img{
 
 .recent-issue-item{
 	float: left;
+	padding:10px 3px;
+}
+
+.recent-issues{
+	color: #fff;
+	padding-bottom: 100px;
+}
+
+.recent-issues > h6{
+	display: block;
+	font-weight: 700;
+	padding: 5px 30px;
 }
 
 .footer{
